<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.neeraj.portfolio.Portfolio">

    <TextView
        android:id="@+id/portfolio_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/portfolio_title"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/portfolio_title"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"

        android:paddingTop="20dp">

        <TableRow>

            <Button
                android:id="@+id/spotify_streamer_button"
                style="@style/accent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/portfolio_button1" />

        </TableRow>

        <TableRow android:paddingTop="10dp">

            <Button
                android:id="@+id/scores_app_button"
                style="@style/accent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/portfolio_button2" />
        </TableRow>

        <TableRow android:paddingTop="10dp">

            <Button
                android:id="@+id/library_app_button"
                style="@style/accent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/portfolio_button3" />
        </TableRow>

        <TableRow android:paddingTop="10dp">

            <Button
                android:id="@+id/build_it_bigger_button"
                style="@style/accent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/portfolio_button4" />
        </TableRow>

        <TableRow android:paddingTop="10dp">

            <Button
                android:id="@+id/xyz_reader_button"
                style="@style/accent"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:text="@string/portfolio_button5" />
        </TableRow>

        <TableRow
            android:paddingTop="10dp">

            <Button
                android:id="@+id/capstone_button"
                style="@style/accent2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/portfolio_button6" />
        </TableRow>

    </TableLayout>
</RelativeLayout>
